# docs/swagger.json
@@ -34,9 +34,177 @@
   ],
   "paths": {
     "/auth": null,
-    "/users": null,
+    "/users": {
+      "patch": {
+        "tags": [
+          "Users"
+        ],
+        "summary": "Update current user profile",
+        "operationId": "updateUserProfile",
+        "description": "Private. Updates authenticated user profile fields: name, email, password.",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "type": "string",
+                    "maxLength": 32
+                  },
+                  "email": {
+                    "type": "string",
+                    "format": "email",
+                    "maxLength": 64
+                  },
+                  "password": {
+                    "type": "string",
+                    "minLength": 8,
+                    "maxLength": 128
+                  }
+                },
+                "additionalProperties": false
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Updated user",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "example": 200
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Successfully updated user profile"
+                    },
+                    "data": {
+                      "type": "object",
+                      "properties": {
+                        "_id": {
+                          "type": "string"
+                        },
+                        "name": {
+                          "type": "string"
+                        },
+                        "email": {
+                          "type": "string",
+                          "format": "email"
+                        },
+                        "avatarUrl": {
+                          "type": "string"
+                        },
+                        "articlesAmount": {
+                          "type": "integer"
+                        },
+                        "description": {
+                          "type": "string"
+                        },
+                        "favouriteArticles": {
+                          "type": "array",
+                          "items": {
+                            "type": "string"
+                          }
+                        },
+                        "createdAt": {
+                          "type": "string",
+                          "format": "date-time"
+                        },
+                        "updatedAt": {
+                          "type": "string",
+                          "format": "date-time"
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "$ref": "#/components/responses/400"
+          },
+          "401": {
+            "$ref": "#/components/responses/401"
+          },
+          "404": {
+            "$ref": "#/components/responses/404byId"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      }
+    },
     "/users/{id}": null,
-    "/categories": null,
+    "/categories": {
+      "get": {
+        "tags": [
+          "Categories"
+        ],
+        "summary": "Get list of categories",
+        "operationId": "getCategories",
+        "description": "Get list of categories",
+        "security": [],
+        "responses": {
+          "200": {
+            "description": "Successful got categories",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "example": 200
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Successful got categories"
+                    },
+                    "data": {
+                      "type": "array",
+                      "items": {
+                        "$ref": "#/components/schemas/category"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "$ref": "#/components/responses/400"
+          },
+          "401": {
+            "$ref": "#/components/responses/401"
+          },
+          "404": {
+            "$ref": "#/components/responses/404all"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      }
+    },
     "/stories": {
       "get": {
         "tags": [
@@ -151,78 +319,6 @@
       "bearerAuth": {
         "type": "http",
         "scheme": "bearer"
-      }
-    },
-    "schemas": {
-      "story": {
-        "type": "object",
-        "required": [
-          "_id",
-          "title",
-          "category",
-          "ownerId",
-          "date"
-        ],
-        "properties": {
-          "_id": {
-            "type": "string",
-            "description": "Story ID"
-          },
-          "title": {
-            "type": "string",
-            "description": "Story title"
-          },
-          "img": {
-            "type": "string",
-            "description": "Image URL (optional)",
-            "nullable": true
-          },
-          "article": {
-            "type": "string",
-            "description": "Story text/content",
-            "nullable": true
-          },
-          "category": {
-            "type": "object",
-            "required": [
-              "_id",
-              "name"
-            ],
-            "properties": {
-              "_id": {
-                "type": "string",
-                "description": "Category ID"
-              },
-              "name": {
-                "type": "string",
-                "description": "Category name"
-              }
-            }
-          },
-          "ownerId": {
-            "type": "string",
-            "description": "Author (user) ID"
-          },
-          "date": {
-            "type": "string",
-            "format": "date-time",
-            "description": "Publication date"
-          },
-          "favoriteCount": {
-            "type": "integer",
-            "description": "Number of times added to favorites"
-          },
-          "createdAt": {
-            "type": "string",
-            "format": "date-time",
-            "description": "Document creation date"
-          },
-          "updatedAt": {
-            "type": "string",
-            "format": "date-time",
-            "description": "Last update date"
-          }
-        }
       }
     },
     "responses": {
@@ -353,6 +449,43 @@
           }
         }
       },
+      "404byId": {
+        "description": "Not found error",
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "required": [
+                "status",
+                "message",
+                "data"
+              ],
+              "properties": {
+                "status": {
+                  "type": "integer",
+                  "example": 404
+                },
+                "message": {
+                  "type": "string",
+                  "example": "NotFoundError"
+                },
+                "data": {
+                  "type": "object",
+                  "required": [
+                    "message"
+                  ],
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "Storie with ID: 68fad270e7f1469dd713faed not found."
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
       "404all": {
         "description": "Not found error",
         "content": {
@@ -387,6 +520,101 @@
                 }
               }
             }
+          }
+        }
+      }
+    },
+    "schemas": {
+      "category": {
+        "type": "object",
+        "required": [
+          "_id",
+          "name"
+        ],
+        "properties": {
+          "_id": {
+            "type": "string",
+            "description": "Category unique identifier",
+            "example": "68fad270e7f1469dd713faef"
+          },
+          "name": {
+            "type": "string",
+            "description": "Category name",
+            "example": "Adventure"
+          }
+        }
+      },
+      "story": {
+        "type": "object",
+        "required": [
+          "_id",
+          "title",
+          "category",
+          "ownerId",
+          "date"
+        ],
+        "properties": {
+          "_id": {
+            "type": "string",
+            "description": "Story ID"
+          },
+          "title": {
+            "type": "string",
+            "description": "Story title"
+          },
+          "img": {
+            "type": [
+              "string",
+              "null"
+            ],
+            "description": "Image URL (optional)"
+          },
+          "article": {
+            "type": [
+              "string",
+              "null"
+            ],
+            "description": "Story text/content"
+          },
+          "category": {
+            "type": "object",
+            "required": [
+              "_id",
+              "name"
+            ],
+            "properties": {
+              "_id": {
+                "type": "string",
+                "description": "Category ID"
+              },
+              "name": {
+                "type": "string",
+                "description": "Category name"
+              }
+            }
+          },
+          "ownerId": {
+            "type": "string",
+            "description": "Author (user) ID"
+          },
+          "date": {
+            "type": "string",
+            "format": "date-time",
+            "description": "Publication date"
+          },
+          "favoriteCount": {
+            "type": "integer",
+            "description": "Number of times added to favorites"
+          },
+          "createdAt": {
+            "type": "string",
+            "format": "date-time",
+            "description": "Document creation date"
+          },
+          "updatedAt": {
+            "type": "string",
+            "format": "date-time",
+            "description": "Last update date"
           }
         }
       }
